# fsbench

./: .gitignore  CALIBRATION_GUIDE.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  nightly.yml  release.yml
schemas/: report-v1.schema.json  task-v1.schema.json
src/fsbench/: __init__.py  cli.py  config.py  constants.py  doctor.py  errors.py  logging.py  models.py  orchestrator.py  scoring.py  seed.py  store.py
src/fsbench/adapters/: aider.py  base.py  claude.py  codex.py  opencode.py  oracle.py  pi.py  registry.py
src/fsbench/checks/: __init__.py  anticheat.py  ast_checks.py  base.py  content.py  custom.py  diff_scope.py  registry.py  static.py  tests.py
src/fsbench/report/: csv_report.py  html_report.py  json_report.py
src/fsbench/sandbox/: __init__.py  base.py  bwrap.py  docker.py  environment.py  process.py  snapshots.py
src/fsbench/tasks/: __init__.py  loader.py  template.py  validation.py
tasks/open/demo-calculator-move/: prompt.md  task.yaml
tests/: test_cli.py  test_doctor.py  test_html_report.py  test_logging.py  test_orchestrator.py  test_report_compare.py  test_schemas.py  test_scoring.py  test_store.py  test_task_validation.py  test_validation_runtime.py
tests/adapters/: test_aider.py  test_base.py  test_claude.py  test_codex.py  test_opencode.py  test_pi.py  test_registry.py
tests/checks/: test_anticheat.py  test_ast_checks.py  test_content.py  test_custom.py  test_diff_scope.py  test_static.py  test_tests.py
tests/integration/: test_oracle_smoke.py
tests/sandbox/: test_docker.py  test_environment.py  test_process.py  test_snapshots.py
(+65 files in other folders)
