[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "fsbench"
version = "0.1.0"
description = "Local CLI harness for reproducible benchmarking of coding agents on Python tasks."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [{ name = "fsbench contributors" }]
dependencies = [
  "pydantic>=2.7,<3",
  "typer>=0.12,<1",
  "PyYAML>=6,<7",
  "Jinja2>=3.1,<4",
  "structlog>=24,<26",
  "psutil>=5.9,<8",
  "aiosqlite>=0.20,<1",
]

[project.optional-dependencies]
dev = [
  "pytest",
  "pytest-asyncio",
  "hypothesis",
  "coverage[toml]",
  "ruff",
  "mypy",
  "mutmut",
  "pip-audit",
  "cyclonedx-bom",
]

[project.scripts]
fsbench = "fsbench.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/fsbench"]

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "ASYNC", "C4", "T20", "RUF"]
ignore = ["B008", "ASYNC240"]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["S101"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_unused_configs = true
show_error_codes = true
pretty = true
mypy_path = "src"

[[tool.mypy.overrides]]
module = ["yaml", "aiosqlite", "psutil"]
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.coverage.run]
branch = true
source = ["fsbench"]

[tool.coverage.report]
show_missing = true
fail_under = 75
